# ChangeLog for x11-libs/libXfixes
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.35 2006/11/09 15:45:05 joshuabaergen Exp $

*libXfixes-4.0.3 (09 Nov 2006)

  09 Nov 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  -files/fix-bad-unlock.patch, -libXfixes-4.0.1-r1.ebuild,
  -libXfixes-4.0.2.ebuild, +libXfixes-4.0.3.ebuild:
  Bump for 7.2RC2.  Includes the locking fix from fix-bad-unlock.patch.

*libXfixes-4.0.2 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXfixes-4.0.2.ebuild:
  Version bump.

*libXfixes-4.0.1-r1 (16 Oct 2006)

  16 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/fix-bad-unlock.patch, +libXfixes-4.0.1-r1.ebuild:
  Add a DisplayUnlock fix from upstream.  Fixes related XCB asserts.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXfixes-4.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXfixes-4.0.1.ebuild:
  Mark 4.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXfixes-4.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -libXfixes-3.0.1.2.ebuild:
  Pull old versions.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  libXfixes-4.0.1.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXfixes-4.0.1.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXfixes-4.0.1.ebuild:
  x86 stable.

  17 Jun 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  libXfixes-4.0.1.ebuild:
  Add missing x11-proto/xextproto dep.  (Volkov Peter, bug #136651)

*libXfixes-4.0.1 (13 May 2006)

  13 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -libXfixes-4.0.ebuild, +libXfixes-4.0.1.ebuild:
  Bump.

*libXfixes-4.0 (29 Apr 2006)

  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXfixes-4.0.ebuild: