@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXfixes/libXfixes-4.0.3.ebuild,v 1.1 2006/11/09 15:45:05 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfixes/libXfixes-4.0.3.ebuild,v 1.2 2007/02/04 18:25:20 joshuabaergen Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,6 @@ inherit x-modular
 DESCRIPTION="X.Org Xfixes library"
 
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
-RESTRICT="mirror"
 
 RDEPEND="x11-libs/libX11
 	>=x11-proto/fixesproto-4
