@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXfixes
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.35 2006/11/09 15:45:05 joshuabaergen Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.36 2007/02/04 18:25:20 joshuabaergen Exp $
+
+  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  libXfixes-4.0.1.ebuild, libXfixes-4.0.3.ebuild:
+  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.
 
 *libXfixes-4.0.3 (09 Nov 2006)
 
